[feature/feature_designupdate_zth] Fixed button align

--- a/public/css/employee/employeelist.css
+++ b/public/css/employee/employeelist.css
@@ -54,6 +54,10 @@
   border-radius: 7px;
 }
 
+.sm-btn{
+  display: inline;
+}
+
 input[type=date] {
   margin: 10px 0;
   padding: 6px 10px;
